--- a/app/src/main/res/layout/activity_new_request.xml
+++ b/app/src/main/res/layout/activity_new_request.xml
@@ -6,4 +6,12 @@
     android:layout_height="match_parent"
     tools:context="com.example.prototype.NewRequest">
 
+    <ListView
+        android:id="@+id/newRequestList"
+        android:divider="@color/colorPrimaryDark"
+        android:layout_width="368dp"
+        android:layout_height="495dp"
+
+        tools:layout_editor_absoluteY="8dp"
+        tools:layout_editor_absoluteX="8dp" />
 </android.support.constraint.ConstraintLayout>
