--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,29 +12,17 @@
         android:layout_weight="0.5"
         android:orientation="vertical">
 
-        <!-- Welcom Sign -->
-        <!--<TextView-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:gravity="center"-->
-        <!--android:text="Welcome"-->
-        <!--android:textSize="30sp"-->
-        <!--android:textColor="#333333"-->
-        <!--android:layout_centerVertical="true"-->
-        <!--android:layout_alignParentLeft="true"-->
-        <!--android:layout_alignParentStart="true" />-->
-
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="72dp"
-            android:layout_gravity="center_horizontal"
-            android:src="@drawable/logo_256"
-            android:layout_centerVertical="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:layout_gravity="center_horizontal"
             android:layout_marginLeft="36dp"
-            android:layout_marginStart="36dp" />
+            android:layout_marginStart="36dp"
+            android:src="@drawable/logo_256" />
 
     </RelativeLayout>
 
