--- a/app/src/main/res/layout/activity_student_portal.xml
+++ b/app/src/main/res/layout/activity_student_portal.xml
@@ -4,15 +4,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.prototype.StudentPortal">
+    tools:context="com.example.prototype.StudentPortal"
+    tools:layout_editor_absoluteY="81dp"
+    tools:layout_editor_absoluteX="0dp">
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="383dp"
-        android:layout_height="138dp"
+        android:layout_width="390dp"
+        android:layout_height="136dp"
         app:srcCompat="@color/colorPrimary"
-        tools:layout_editor_absoluteY="-26dp"
-        tools:layout_editor_absoluteX="1dp" />
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.409" />
 
     <TextView
         android:id="@+id/welcomeSign"
@@ -21,36 +31,49 @@
         android:text="Welcome!"
         android:textColor="@android:color/background_light"
         android:textSize="40sp"
-        tools:layout_editor_absoluteX="103dp"
-        tools:layout_editor_absoluteY="26dp" />
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="@+id/imageView"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageView"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        android:layout_marginBottom="8dp" />
 
     <LinearLayout
-        android:layout_width="297dp"
-        android:layout_height="222dp"
+        android:id="@+id/request_form"
+        android:layout_width="313dp"
+        android:layout_height="209dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
         android:orientation="vertical"
-        tools:layout_editor_absoluteX="41dp"
-        tools:layout_editor_absoluteY="225dp">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView">
 
         <ImageButton
-            android:id="@+id/imageButton2"
+            android:id="@+id/addButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/add_32" />
 
         <ImageButton
-            android:id="@+id/imageButton3"
+            android:id="@+id/deleteButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/delete_32" />
 
         <ImageButton
-            android:id="@+id/imageButton4"
+            android:id="@+id/withdrawButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/minus_32" />
 
         <ImageButton
-            android:id="@+id/imageButton5"
+            android:id="@+id/checkButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/menu_32"
