--- a/app/src/main/res/layout/activity_academic_advisor_portal.xml
+++ b/app/src/main/res/layout/activity_academic_advisor_portal.xml
@@ -11,8 +11,14 @@
         android:layout_height="wrap_content"
 
         android:orientation="vertical"
-        tools:layout_editor_absoluteY="216dp"
-        tools:layout_editor_absoluteX="8dp">
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp">
 
 
         <TextView
@@ -53,6 +59,6 @@
             tools:layout_editor_absoluteX="8dp"
             tools:layout_editor_absoluteY="191dp" />
     </LinearLayout>
-    L
+
 
 </android.support.constraint.ConstraintLayout>
