--- a/app/src/main/res/layout/activity_student_portal.xml
+++ b/app/src/main/res/layout/activity_student_portal.xml
@@ -8,11 +8,19 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="383dp"
+        android:layout_width="0dp"
         android:layout_height="138dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:srcCompat="@color/colorPrimary"
-        tools:layout_editor_absoluteY="-26dp"
-        tools:layout_editor_absoluteX="1dp" />
+        app:layout_constraintHorizontal_bias="0.0"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="391dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="0dp"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/welcomeSign"
@@ -21,15 +29,36 @@
         android:text="Welcome!"
         android:textColor="@android:color/background_light"
         android:textSize="40sp"
-        tools:layout_editor_absoluteX="103dp"
-        tools:layout_editor_absoluteY="26dp" />
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="@+id/imageView"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="34dp"
+        app:layout_constraintHorizontal_bias="0.497"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintVertical_bias="0.029"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
 
     <LinearLayout
         android:layout_width="297dp"
         android:layout_height="222dp"
         android:orientation="vertical"
-        tools:layout_editor_absoluteX="41dp"
-        tools:layout_editor_absoluteY="225dp">
+        android:id="@+id/linearLayout"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="127dp"
+        app:layout_constraintHorizontal_bias="0.507"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintVertical_bias="0.773"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp">
 
         <ImageButton
             android:id="@+id/imageButton2"
