--- a/app/src/main/res/layout/activity_student_portal.xml
+++ b/app/src/main/res/layout/activity_student_portal.xml
@@ -61,27 +61,31 @@
         android:layout_marginEnd="8dp">
 
         <ImageButton
-            android:id="@+id/imageButton2"
+            android:id="@+id/addButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="goToAddRequest"
             app:srcCompat="@drawable/add_32" />
 
         <ImageButton
-            android:id="@+id/imageButton3"
+            android:id="@+id/deleteButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="goToDeleteRequest"
             app:srcCompat="@drawable/delete_32" />
 
         <ImageButton
-            android:id="@+id/imageButton4"
+            android:id="@+id/withdrawButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="goToWithdrawRequest"
             app:srcCompat="@drawable/minus_32" />
 
         <ImageButton
-            android:id="@+id/imageButton5"
+            android:id="@+id/checkButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="goToCheckRequest"
             app:srcCompat="@drawable/menu_32"
             tools:layout_editor_absoluteX="8dp"
             tools:layout_editor_absoluteY="177dp" />
