--- a/app/src/main/res/layout/activity_academic_request.xml
+++ b/app/src/main/res/layout/activity_academic_request.xml
@@ -42,7 +42,7 @@
         app:layout_constraintVertical_bias="0.419" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/gpa"
         android:layout_width="119dp"
         android:layout_height="44dp"
         android:layout_marginBottom="8dp"
