--- a/app/src/main/res/layout/activity_old_request.xml
+++ b/app/src/main/res/layout/activity_old_request.xml
@@ -6,21 +6,6 @@
     android:layout_height="match_parent"
     tools:context="com.example.prototype.OldRequest">
 
-    <ListView
-        android:id="@+id/oldRequestList"
-        android:layout_width="298dp"
-        android:layout_height="289dp"
-        android:divider="@color/colorPrimaryDark"
-
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/gridLayout" />
-
     <GridLayout
         android:id="@+id/gridLayout"
         android:layout_width="366dp"
@@ -32,7 +17,9 @@
         android:clickable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp">
 
         <TextView
             android:id="@+id/infoText"
@@ -41,5 +28,20 @@
             android:text="Course Info -"
             android:textColor="@android:color/background_dark" />
     </GridLayout>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/request_old"
+        android:layout_width="367dp"
+        android:layout_height="368dp"
+        android:layout_marginBottom="0dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginTop="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.529"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
 </android.support.constraint.ConstraintLayout>
