--- a/app/src/main/res/layout/activity_student_portal.xml
+++ b/app/src/main/res/layout/activity_student_portal.xml
@@ -14,12 +14,9 @@
         app:layout_constraintRight_toRightOf="parent"
         app:srcCompat="@color/colorPrimary"
         app:layout_constraintHorizontal_bias="0.0"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="391dp"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="0dp"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
@@ -35,56 +32,87 @@
         app:layout_constraintRight_toRightOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="34dp"
-        app:layout_constraintHorizontal_bias="0.497"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
-        app:layout_constraintVertical_bias="0.029"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp" />
 
     <LinearLayout
-        android:layout_width="297dp"
-        android:layout_height="222dp"
-        android:orientation="vertical"
         android:id="@+id/linearLayout"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="127dp"
-        app:layout_constraintHorizontal_bias="0.507"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.773"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp">
+        android:orientation="vertical"
+        android:weightSum="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp">
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Add"
+            android:textAlignment="center"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="18sp" />
 
         <ImageButton
             android:id="@+id/addButton"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="85dp"
             android:onClick="goToAddRequest"
             app:srcCompat="@drawable/add_32" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Delete"
+            android:textAlignment="center"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="18sp" />
 
         <ImageButton
             android:id="@+id/deleteButton"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="85dp"
             android:onClick="goToDeleteRequest"
             app:srcCompat="@drawable/delete_32" />
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Withdraw"
+            android:textAlignment="center"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="18sp" />
 
         <ImageButton
             android:id="@+id/withdrawButton"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="85dp"
             android:onClick="goToWithdrawRequest"
             app:srcCompat="@drawable/minus_32" />
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="View Request"
+            android:textAlignment="center"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="18sp" />
 
         <ImageButton
             android:id="@+id/checkButton"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="85dp"
+            android:layout_weight="0.28"
             android:onClick="goToCheckRequest"
             app:srcCompat="@drawable/menu_32"
             tools:layout_editor_absoluteX="8dp"
