--- a/app/src/main/res/layout/activity_academic_advisor_portal.xml
+++ b/app/src/main/res/layout/activity_academic_advisor_portal.xml
@@ -7,55 +7,58 @@
     tools:context="com.example.prototype.AcademicAdvisorPortal">
 
     <LinearLayout
-        android:layout_width="368dp"
-        android:layout_height="wrap_content"
+        android:layout_width="365dp"
+        android:layout_height="383dp"
 
         android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
         android:layout_marginTop="8dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.526"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.498">
+        app:layout_constraintTop_toTopOf="parent">
 
 
         <TextView
             android:id="@+id/newRequestText"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="New Request"
+            android:text="View New Requests"
+            android:textAlignment="center"
             android:textColor="@color/colorAccent"
             android:textSize="20dp"
+            android:textStyle="bold"
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="158dp" />
 
         <ImageButton
             android:id="@+id/newRequestButton"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="145dp"
             android:onClick="goNewActivity"
             app:srcCompat="@drawable/list_square_button"
             tools:layout_editor_absoluteX="8dp"
-            tools:layout_editor_absoluteY="328dp" />
+            tools:layout_editor_absoluteY="191dp" />
 
         <TextView
             android:id="@+id/oldRequestText"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Old Request"
+            android:text="View processed Requests"
+            android:textAlignment="center"
             android:textColor="@color/colorAccent"
             android:textSize="20dp"
+            android:textStyle="bold"
             tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="297dp" />
+            tools:layout_editor_absoluteY="158dp" />
 
         <ImageButton
             android:id="@+id/oldRequestButton"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="145dp"
             android:onClick="goOldActivity"
             app:srcCompat="@drawable/old_list_square_button"
             tools:layout_editor_absoluteX="8dp"
