--- a/app/src/main/res/layout/activity_add_request.xml
+++ b/app/src/main/res/layout/activity_add_request.xml
@@ -21,7 +21,7 @@
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        app:layout_constraintVertical_bias="0.32"
+        app:layout_constraintVertical_bias="0.462"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp" />
 
@@ -38,7 +38,7 @@
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintHorizontal_bias="0.697"
-        app:layout_constraintVertical_bias="0.319"
+        app:layout_constraintVertical_bias="0.46"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp" />
 
@@ -59,27 +59,29 @@
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintHorizontal_bias="0.092"
-        app:layout_constraintVertical_bias="0.42"
+        app:layout_constraintVertical_bias="0.6"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp" />
 
     <Button
         android:id="@+id/submitbutton"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="Submit"
         android:textColor="@color/colorPrimary"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.66"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
+        app:layout_constraintVertical_bias="0.825" />
 
     <EditText
 
@@ -97,15 +99,15 @@
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.686"
-        app:layout_constraintVertical_bias="0.419"
+        app:layout_constraintHorizontal_bias="0.648"
+        app:layout_constraintVertical_bias="0.599"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp" />
 
     <ImageView
         android:id="@+id/Adding_imageView"
         android:layout_width="0dp"
-        android:layout_height="80dp"
+        android:layout_height="90dp"
         android:layout_marginBottom="8dp"
         android:background="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -118,21 +120,25 @@
 
     <TextView
         android:id="@+id/Adding_textView"
-        android:layout_width="150dp"
-        android:layout_height="40dp"
+        android:layout_width="230dp"
+        android:layout_height="47dp"
         android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:fontFamily="sans-serif-smallcaps"
         android:text="Adding Course"
+        android:textAlignment="center"
         android:textColor="@android:color/background_light"
-        android:textSize="20sp"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="@+id/Adding_imageView"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="@+id/Adding_imageView"
         app:layout_constraintTop_toTopOf="@+id/Adding_imageView"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
+        tools:layout_editor_absoluteY="35dp"
+        tools:layout_editor_absoluteX="61dp" />
 
 
 </android.support.constraint.ConstraintLayout>
